@@ -357,6 +357,7 @@
 				<em>Example:</em> <tt>'qQ4KhL_pu|s@Zm7n#%:b^{A[vhm'</tt></li>
 				<li><code>yourls_user_passwords</code><br/>
 				A list of username(s) and password(s) allowed to access the site if private<br/>
+				Passwords can either be in plain text, or encrypted: see <a href="http://yourls.org/userpassword">http://yourls.org/userpassword</a> for more information<br/>
 				<em>Example:</em> <tt>'joe' => 'mypassword'</tt></li>
 			</ul>
 			
