@@ -71,6 +71,7 @@ list, simply refer to the commit messages: http://code.google.com/p/yourls/sourc
 
 1.5.1
 - added: full jsonp support
+- added: ability to use encrypted passwords in the config file
 - added: hooks, hooks, hooks
 - fixed: bugs, bugs, bugs
 - improved: things, things, things
